# btc_wallet

./: README.md  pyproject.toml
data/: bitcoinlib_testnet.db
docs/.ipynb_checkpoints/: requisitos_gerar_carteira-checkpoint.md  requisitos_simulacao-checkpoint.md
notebooks/: geracao_carteira_btc_testnet.html  geracao_carteira_btc_testnet.ipynb  historico_transacoes_testnet.json  simular_transacao_testnet.ipynb
src/btc_wallet_testnet/: create_wallet.py
src/btc_wallet_testnet/.ipynb_checkpoints/: __init__-checkpoint.py
tests/.ipynb_checkpoints/: test_wallet-checkpoint.py
