[tool.poetry]
name = "btc-wallet-testnet-py"
version = "0.1.0"
description = "BTC Wallet BIP84 Testnet em Python"
authors = ["Luciano Magalhães <lucianomagalhaes.analytics@gmail.com>"]
readme = "README.md"
packages = [
  { include = "btc_wallet_testnet", from = "src" }
]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
bip-utils = ">=2.9.3,<3.0.0"
jupyter = ">=1.1.1,<2.0.0"
ipykernel = ">=6.30.1,<7.0.0"
bitcoinlib = "^0.7.5"
notebook = ">=6.0.0,<7.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
